<resources>
    <string name="app_name">픿아오</string>

    <string name="oauth_client_id">829770041202-f2rt4aefa14fd03g255ga4d3b9d3qnca.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_chat_list">대화목록</string>
    <string name="hint_search_id">ID 검색</string>
    <string name="text_chat_add">친구 검색</string>
    <string name="text_chat_start">채팅</string>
    <string name="text_user_story">고민중...</string>

    <string name="text_title_alert">알림</string>
    <string name="text_delete">삭제</string>
    <string name="text_play">픿 실행</string>

    <string name="text_chat_add_desc">찾을 친구의 구글 아이디를 입력해주세요!</string>

    <string name="text_all_picture">전체 보기</string>
    <string name="text_img_detail">전체 화면</string>

    <string name="default_notification_channel_id">fcm</string>
    <string name="default_notification_channel_group">fcm_group_pix</string>

    <string name="fcm_user_token">FCM_USER_TOKEN</string>

    <string name="permission_request">앱을 사용하기 위해선 권한이 필요합니다.</string>

    <string name="text_menu_profile">프로필</string>
    <string name="text_menu_friends">친구목록</string>
    <string name="text_menu_chat_list">대화목록</string>
    <string name="text_menu_add_friends">친구추가</string>

    <!-- setting options string -->
    <string name="text_block_user">차단된 사용자</string>
    <string name="text_user_term">이용약관 / 개인정보처리방침</string>
    <string name="text_user_push">푸쉬 사용 여부</string>
    <string name="text_use_permission">사용 권한 보기</string>
    <string name="text_delete_cache">캐시 지우기</string>
    <string name="text_delete_data">데이터 지우기</string>
    <string name="text_version">사용버전 / 최신버전</string>
    <string name="text_service_center">고객센터</string>
    <string name="text_logout">로그아웃</string>
</resources>

