<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pic_icon"
            app:layout_constraintBottom_toBottomOf="@+id/line3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="홍길동"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_user_desc"
            app:layout_constraintLeft_toRightOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="@+id/img_profile" />

        <TextView
            android:id="@+id/txt_user_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="hongglidong@gmail.com"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
            app:layout_constraintLeft_toRightOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

        <android.widget.Button
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/btn_profile_border_radus"
            android:text="프로필 수정"
            android:stateListAnimator="@null"
            android:textSize="12sp"
            android:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_user_desc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_user_name"
            app:strokeColor="@color/red"
            app:strokeWidth="3dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <View
            android:id="@+id/view_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_lightGray"
            app:layout_constraintLeft_toLeftOf="@+id/line3"
            app:layout_constraintBottom_toTopOf="@+id/btn_block_user"
            />

        <Button
            android:id="@+id/btn_block_user"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/text_block_user"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line3"
            app:layout_constraintBottom_toTopOf="@+id/btn_terms"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_lightGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_terms" />

        <Button
            android:id="@+id/btn_terms"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/text_user_term"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_block_user"
            app:layout_constraintBottom_toTopOf="@+id/btn_use_permission"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_lightGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_use_permission" />

        <Button
            android:id="@+id/btn_use_permission"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/text_use_permission"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_terms"
            app:layout_constraintBottom_toTopOf="@+id/btn_use_push"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_lightGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_use_push" />

        <Button
            android:id="@+id/btn_use_push"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/text_user_push"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_use_permission"
            app:layout_constraintBottom_toTopOf="@+id/btn_delete_cache"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_lightGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_delete_cache" />

        <Button
            android:id="@+id/btn_delete_cache"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/text_delete_cache"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_use_push"
            app:layout_constraintBottom_toTopOf="@+id/btn_service_center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_lightGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_service_center" />

        <Button
            android:id="@+id/btn_service_center"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/text_service_center"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete_cache"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/btn_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="@string/text_version"
        android:stateListAnimator="@null"
        android:textColor="@color/black"
        app:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_settings" />

    <android.widget.Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/text_logout"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_version" />


</androidx.constraintlayout.widget.ConstraintLayout>